<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="lab.u2xd.socialspace.experimenter.BasicInfo">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/basicinfo_field_name"
        android:layout_gravity="center_horizontal"
        android:hint="@string/basicinfo_textfield_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/basicinfo_field_age"
        android:layout_gravity="center_horizontal"
        android:hint="@string/basicinfo_textfield_age" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/basicinfo_field_major"
        android:layout_gravity="center_horizontal"
        android:hint="@string/basicinfo_textfield_major" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basicinfo_radio_man"
            android:id="@+id/basicinfo_radio_man"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basicinfo_radio_woman"
            android:id="@+id/basicinfo_radio_woman" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/basicinfo_text_contact"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:paddingTop="30dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/basicinfo_field_number"
        android:layout_gravity="center_horizontal"
        android:hint="@string/basicinfo_textfield_number" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/basicinfo_field_email"
        android:layout_gravity="center_horizontal"
        android:hint="@string/basicinfo_textfield_email" />

    <Button
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:text="@string/basicinfo_button_finish"
        android:id="@+id/basicinfo_button_finish"
        android:layout_gravity="center_horizontal"
        android:onClick="Finish_Click" />

</LinearLayout>
