<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_execute"
        android:id="@+id/main_button_execute"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:onClick="Execute_Click" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_notigen"
        android:id="@+id/main_button_notigen"
        android:onClick="NotiGen_Click"
        android:layout_below="@+id/main_button_execute"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_datadelete"
        android:id="@+id/main_button_datadelete"
        android:onClick="DataDelete_Click"
        android:layout_alignTop="@+id/main_button_execute"
        android:layout_toEndOf="@+id/main_button_execute" />

</RelativeLayout>
